- Mail is going to send with swiftmailer.
- In the PDO connection string for MySQL uses host=localhost instead of unix_socket=.
- The method template "public function createInDB($bypassAuth)" is changed to "public function createInDB()" in
  DBClass_Interface. Some processes relevant to apply the privilege of record to an user was bypassed, but it requires
  to process them.
- [BUG FIX] After the password of ldap user is changed, propagation of the new password is improved.
- [BUG FIX] Buttons on pagination (ex. Insert...) was disappeared in case of clicking Insert button on related context.
- [BUG FIX] Cache mode did't work. This bug is added after branching 6(master) and 5.x.
- [BUG FIX] Calculation from other contexts didn't work, and fix it.

Ver.5.10-dev (in development)
-

Ver.5.9 (January 29, 2019)
- Reduce error messages when using PHP 7.2 and DB_FileMaker_DataAPI class.
- [BUG FIX] Fix compatibility with PHP 5.6.40 (Thanks to Kenzo Nakata).
- [BUG FIX] Modify GenerateJSCode.php to fix compatibility with XAMPP for Windows.
- [BUG FIX] Fix showing images in FileMaker container fields with multibyte database name.
- [BUG FIX] If someone loges in after self-service enrollment, enrollment info in issued hash table was eliminated.
- [BUG FIX] Preserve the id attribute value of target nodes inside of THEAD or TFOOT elements in case of using Post Only mode.

Ver.5.8 (November 3, 2018)
- Improve speed performance of Native Authentication and LDAP Authentication.
- Add DB_FileMaker_DataAPI class to support FileMaker Data API of FileMaker Server 17.
- Support retrieving image files in container fields when using DB_FileMaker_DataAPI class.
- Support uploading files to container fields when using DB_FileMaker_DataAPI class.
- Update FMDataAPI.php (Ver.12) for FileMaker Data API.
- Add JSEncrypt <http://travistidwell.com/jsencrypt/> to "js_lib" directory in "lib" directory and
  remove "bi2php" from "lib" directory to improve speed performance of Native Authentication.